[package]
name = "mepple"
version = "0.1.0"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hbina/mepple.git"
description = "English dictionary as a library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["data/", "build.rs", "build.rs"]

[dependencies]
lazy_static = "1.4.0"

[build-dependencies]
sqlite = "0.25.1"
